@@ -1,5 +1,5 @@
 /*
- * $Id: gp_types.h,v 1.48 2010/07/30 18:32:55 sfeam Exp $
+ * $Id: gp_types.h,v 1.49 2010/10/27 04:22:43 sfeam Exp $
  */
 
 /* GNUPLOT - gp_types.h */
@@ -88,6 +88,7 @@ typedef enum PLOT_STYLE {
     BOXES        =  9*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_FILL),
     BOXERROR     = 10*PLOT_STYLE_BITS + (PLOT_STYLE_HAS_LINE | PLOT_STYLE_HAS_FILL),
     STEPS        = 11*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
+    FILLSTEPS    = 11*PLOT_STYLE_BITS + PLOT_STYLE_HAS_FILL,
     FSTEPS       = 12*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
     HISTEPS      = 13*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
     VECTOR       = 14*PLOT_STYLE_BITS + PLOT_STYLE_HAS_LINE,
